cabal-version: 2.4
name:          rpn
version:       0.1.0
author:        Morrow
maintainer:    themorrowm@gmail.com
license:       BSD-3-Clause
homepage:      https://github.com/morrowm/rpn
bug-reports:   https://github.com/morrowm/rpn/issues

executable rpn
  main-is:          Main.hs
  build-depends:
    , base       >=4.13 && <5
    , haskeline  ^>=0.8

  default-language: Haskell2010
  ghc-options:      -Wall
